# NeuralNetworkFromScratch

./: CMakeLists.txt
include/: Activation.hh  Layer.hh  Network.hh  Neuron.hh
src/: Activation.cc  Neuron.cc  test.cc
